# CodeWar

./: BuyCar.cpp  CMakeLists.txt  CenturyFromYear.cpp  CenturyFromYear.h  Digitize.cpp  Digitize.h  FindOdd.h  FindSmallest.cpp  FindSmallest.h  GetMiddle.cpp  GetMiddle.h  MaxRotate.cpp  MaxRotate.h  NumberofPeopleinBus.cpp  NumberofPeopleinBus.h  StockList.cpp  StockList.h  TwoToOne.cpp  TwoToOne.h  Utility.cpp  Utility.h  arraySame.cpp  convertFrac.cpp  convertFrac.h  findOdd.cpp  gdb.exe.stackdump  isValidWalk.cpp  isValidWalk.h  main.cpp  main.h  maxSequence.cpp  maxSequence.h  newfile.h  rot13.cpp  rot13.h  sumTwoSmallestNumbers.cpp  sumTwoSmallestNumbers.h  tempCodeRunnerFile.cpp  workspace.code-workspace
